Changes to layout

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,17 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Istok+Web:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;700;800&display=swap');
 
 //Colors
 $background-color: #FFFEFD;
-$primary-color: #004CFF;
+$primary-color: #8D763F;
 $black-color: #000817;
-$paragraph-color: #7E7F89;
+$paragraph-color: #969696;
 $cards-color: #EBEBEB;
 $bg-card-style: #FAFAFA;
-$span-color: #00FFC6;
+$green-color: #537C52;
+$title-color: #E6E6E6;
+$main-boxColor: #28313a46;
+$grid-color: #41404040;
 // #0da26e
 
 //Fonts
 
 $font: 'Poppins', sans-serif;
-$font-title: "Istok Web", sans-serif
+$font-title: "Istok Web", sans-serif;
+$main-fontStyle: 'Raleway', sans-serif;
